@@ -888,4 +888,9 @@ function is_natural($var) {
 	return preg_match('/^[1-9][0-9]$/', $var);
 }
 
+function check_password_strength($password) {
+	return (preg_match('/[a-z]/', $password) && preg_match('/[A-Z]/' $password)
+		&& preg_match('/[0-9]/', $password) && mb_strlen($password) >= 8);
+}
+
 ?>
