@@ -132,6 +132,8 @@ version ? (????-??-??):
   - payments: support %type placeholder which gets its value from tarifftypes config section [chilan]
   - queues to whom we don't have access privileges, are not shown at all [chilan]
   - required read permission to cash registry to be able view receipt list [chilan]
+  - user password should contain at least one capital letter, one lower case letter, one digit
+    and should consist of at least 8 characters [chilan]
 
 version 1.11.13 Dira (2011-04-07)
 
